<resources>
    <string name="app_name">Assignment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TARUC FOOD</string>
    <string name="nav_header_subtitle">You are not logged in</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="forgetpass">Forget Password</string>

    <string name="menu_home">Home</string>
    <string name="menu_login">Login</string>
    <string name="menu_register">Register</string>
    <string name="menu_logout">Logout</string>

    <string name="home_second">Home Second</string>

    <string name="menu_cart">Cart</string>

    <string name="menu_order">View Orders</string>

    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Don\'t have an account? Sign up here!</string>

    <string name="customer">Register as Customer</string>
    <string name="seller">Register as Seller</string>
    <string name="menu_category">Categories</string>
    <string name="menu_AddShop">Add Shop</string>
    <string name="menu_ADDFood">ADD Food</string>
    <string name="popular_categories">Popular categories</string>
    <string name="best_deals">Best Deals</string>
    <string name="menu_food_list">Food List</string>
    <string name="menu_food_detail">Food Detail</string>
    <string name="size">Size</string>
    <string name="add_on">Add on</string>
    <string name="action_clear_cart">Clear Cart</string>
    <string name="visa_card">Visa Card</string>
    <string name="name_on_card">Name on Card</string>
    <string name="card_number">Card Number</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvc">CVC</string>
    <string name="action_filter">Filter</string>


</resources>
