<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/user_home_group">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_black_24dp"
            android:title="@string/menu_category" />

        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/menu_cart" />

        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_event_available_black_24dp"
            android:title="@string/menu_order" />
    </group>
    <group android:id="@+id/user_user_group">
        <item
                        android:id="@+id/nav_logout"
                        android:icon="@drawable/ic_exit_to_app_black_24dp"
                        android:title="@string/menu_logout" />



</group>
</menu>
