<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.assignment.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.example.assignment.ui.menu.MenuFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragmennt_category">
        <action
            android:id="@+id/action_menu_to_food_list"
            app:destination="@id/nav_food_list"
            app:popUpTo="@id/nav_menu"
            />


    </fragment>

    <fragment
    android:id="@+id/nav_food_list"
    android:name="com.example.assignment.ui.foodlist.FoodListFragment"
    android:label="@string/menu_food_list"
    tools:layout="@layout/fragment_food_list">

        <action
            android:id="@+id/action_food_list_to_food_details"
            app:destination="@id/nav_food_detail"
            app:popUpTo="@id/nav_food_list"
            />

    </fragment>


    <fragment
        android:id="@+id/nav_food_detail"
        android:name="com.example.assignment.ui.fooddetails.FoodDetailFragment"
        android:label="@string/menu_food_detail"
        tools:layout="@layout/fragment_food_detail"/>

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.assignment.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login">

        <action
        android:id="@+id/action_loginFragment_to_registerFragment"
        app:destination="@id/nav_register"
        app:popUpTo="@id/nav_login" />

    </fragment>


    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.assignment.ui.register.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" />




</navigation>