<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_user"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.assignment.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.example.assignment.ui.menu.MenuFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragmennt_category"/>

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.assignment.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_nav_cart_to_nav_order"
            app:destination="@id/nav_order" />
    </fragment>

    <fragment
        android:id="@+id/nav_order"
        android:name="com.example.assignment.ui.order.OrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.assignment.ui.login.Logout"
        android:label="@string/menu_order"
        />


</navigation>